--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!--
         <header> is a semantic element: it works exactly like <div>, but it gives information about the role of the code below.
         The "row" class is used for the Bootstrap grid.
-      -->
+      --><img src="../../resume/retush seryi-min-min.jpg" width="413" height="531" alt=""/>
       <header class="row resume-header justify-content-center">
         <!--
           A container to wrap around the portrait and align it. We use Bootstrap grid columns.
